tests/ui/closure_context/issue-42065.stderr
error[E0382]: use of moved value: `debug_dump_dict`
  --> $DIR/issue-42065.rs:11:5
   |
LL |     debug_dump_dict();
   |     ----------------- `debug_dump_dict` moved due to this call
LL |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^ value used here after move
   |
note: closure cannot be invoked more than once because it moves the variable `dict` out of its environment
  --> $DIR/issue-42065.rs:6:29
   |
LL |         for (key, value) in dict {
   |                             ^^^^
note: this value implements `FnOnce`, which causes it to be moved when called
  --> $DIR/issue-42065.rs:10:5
   |
LL |     debug_dump_dict();
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0382`.
